deploy/k8s/platform/tei-embeddings/network-policy.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: tei-netpol
spec:
  endpointSelector:
    matchLabels:
      app: tei-embeddings
  ingress:
  - fromEndpoints:
    - matchLabels:
        app: api
        k8s:io.kubernetes.pod.namespace: rag-api
    - matchLabels:
        app: indexer
        k8s:io.kubernetes.pod.namespace: rag-jobs
    toPorts:
    - ports:
      - port: "8080"
        protocol: TCP
